--- a/zkhwClient/zkhwClient.csproj
+++ b/zkhwClient/zkhwClient.csproj
@@ -174,6 +174,7 @@
     <Compile Include="dao\PublicHealthDao\hypertensionPatientDao.cs" />
     <Compile Include="dao\PublicHealthDao\personalBasicInfoDao.cs" />
     <Compile Include="dao\SystemSettingsDao\areaConfigDao.cs" />
+    <Compile Include="dao\SystemSettingsDao\jkInfoDao.cs" />
     <Compile Include="dao\SystemSettingsDao\basicSettingDao.cs" />
     <Compile Include="dao\SystemSettingsDao\grjdDao.cs" />
     <Compile Include="dao\SystemSettingsDao\loginLogDao.cs" />
