添加图片文件

--- a/zkhwClient/zkhwClient.csproj
+++ b/zkhwClient/zkhwClient.csproj
@@ -722,6 +722,34 @@
     <Content Include="dll\MySqlBackup.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="images\about.png" />
+    <Content Include="images\assign.png" />
+    <Content Include="images\cancel.png" />
+    <Content Include="images\check.png" />
+    <Content Include="images\clear.png" />
+    <Content Include="images\close.png" />
+    <Content Include="images\delete.png" />
+    <Content Include="images\dqjl.png" />
+    <Content Include="images\fanhui.png" />
+    <Content Include="images\hover.png" />
+    <Content Include="images\inputcontent.png" />
+    <Content Include="images\insert.png" />
+    <Content Include="images\kong.png" />
+    <Content Include="images\login.png" />
+    <Content Include="images\login1.png" />
+    <Content Include="images\logo.png" />
+    <Content Include="images\password.png" />
+    <Content Include="images\save.png" />
+    <Content Include="images\shezhi.png" />
+    <Content Include="images\sjtb.png" />
+    <Content Include="images\startPic.jpg" />
+    <Content Include="images\stop.png" />
+    <Content Include="images\tpbc.png" />
+    <Content Include="images\tpsc.png" />
+    <Content Include="images\tuichu.png" />
+    <Content Include="images\update.png" />
+    <Content Include="images\xzwj.png" />
+    <Content Include="images\身份证样图.png" />
     <Content Include="zkhw.ico" />
   </ItemGroup>
   <ItemGroup>
