--- a/zkhwClient/zkhwClient.csproj
+++ b/zkhwClient/zkhwClient.csproj
@@ -207,6 +207,12 @@
     <Compile Include="service\PublicHealthService\hypertensionPatientService.cs" />
     <Compile Include="service\PublicHealthService\personalBasicInfoService.cs" />
     <Compile Include="utils\CVRSDK.cs" />
+    <Compile Include="view\PublicHealthView\aUolderHelthService.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\PublicHealthView\aUolderHelthService.Designer.cs">
+      <DependentUpon>aUolderHelthService.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\public\family_record.cs">
       <SubType>Form</SubType>
     </Compile>
