--- a/zkhwClient/App.config
+++ b/zkhwClient/App.config
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="zkhwClient.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
     </startup>
 	<connectionStrings>
 		<add name="MySql_Connection" connectionString="database=zkhwClient;Password=zkhw123;User ID=zkhw;server=47.92.74.93;port=3307;character set=utf8"/>
 	</connectionStrings>
+ <userSettings>
+  <zkhwClient.Properties.Settings>
+   <setting name="timeInterval" serializeAs="String">
+    <value>120000</value>
+   </setting>
+  </zkhwClient.Properties.Settings>
+ </userSettings>
 </configuration>
