--- a/zkhwClient/zkhwClient.csproj
+++ b/zkhwClient/zkhwClient.csproj
@@ -166,7 +166,9 @@
     <Compile Include="bean\loginLogBean.cs" />
     <Compile Include="bean\physical_examination_recordBean.cs" />
     <Compile Include="bean\resident_base_infoBean.cs" />
+    <Compile Include="bean\shenghuaBean.cs" />
     <Compile Include="bean\UserInfo.cs" />
+    <Compile Include="bean\xuechangguiBean.cs" />
     <Compile Include="control\PagerControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -181,6 +183,7 @@
     <Compile Include="dao\SystemSettingsDao\jkInfoDao.cs" />
     <Compile Include="dao\SystemSettingsDao\basicSettingDao.cs" />
     <Compile Include="dao\SystemSettingsDao\grjdDao.cs" />
+    <Compile Include="dao\SystemSettingsDao\tjcheckDao.cs" />
     <Compile Include="dao\SystemSettingsDao\loginLogDao.cs" />
     <Compile Include="dao\SystemSettingsDao\UserDao.cs" />
     <Compile Include="frmLogin.cs">
@@ -399,6 +402,12 @@
     <Compile Include="view\setting\deviceManagement.Designer.cs">
       <DependentUpon>deviceManagement.cs</DependentUpon>
     </Compile>
+    <Compile Include="view\setting\parameterSetting.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\setting\parameterSetting.Designer.cs">
+      <DependentUpon>parameterSetting.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\setting\systemlog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -587,6 +596,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="view\setting\basicInfoSettings.resx">
       <DependentUpon>basicInfoSettings.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\setting\parameterSetting.resx">
+      <DependentUpon>parameterSetting.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\SystemSettingsView\passWordUpdate.resx">
       <DependentUpon>passWordUpdate.cs</DependentUpon>
