--- a/zkhwClient/App.config
+++ b/zkhwClient/App.config
@@ -16,6 +16,9 @@
    <setting name="timeInterval" serializeAs="String">
     <value>120000</value>
    </setting>
+   <setting name="timer3Interval" serializeAs="String">
+    <value>60000</value>
+   </setting>
   </zkhwClient.Properties.Settings>
  </userSettings>
 </configuration>
