--- a/zkhwClient/App.config
+++ b/zkhwClient/App.config
@@ -10,6 +10,7 @@
     </startup>
 	<connectionStrings>
 		<add name="MySql_Connection" connectionString="database=zkhwClient;Password=zkhw123;User ID=zkhw;server=47.92.74.93;port=3307;character set=utf8"/>
+    <add name="MySql_ConnectionYpt" connectionString="database=zkhw;Password=zkhw123;User ID=zkhw;server=47.92.74.93;port=3307;character set=utf8"/>
 	</connectionStrings>
  <userSettings>
   <zkhwClient.Properties.Settings>
