--- a/zkhwClient/zkhwClient.csproj
+++ b/zkhwClient/zkhwClient.csproj
@@ -164,6 +164,7 @@
     <Compile Include="bean\elderly_tcm_recordBean.cs" />
     <Compile Include="bean\fuv_hypertensionBean.cs" />
     <Compile Include="bean\grjdxxBean.cs" />
+    <Compile Include="bean\hospitalizedRecord.cs" />
     <Compile Include="bean\jkBean.cs" />
     <Compile Include="bean\loginLogBean.cs" />
     <Compile Include="bean\ltdOrganization.cs" />
@@ -253,10 +254,10 @@
     <Compile Include="view\PublicHealthView\aUolderHelthService.Designer.cs">
       <DependentUpon>aUolderHelthService.cs</DependentUpon>
     </Compile>
-    <Compile Include="view\public\family_record.cs">
+    <Compile Include="view\publicRecord\family_record.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="view\public\family_record.Designer.cs">
+    <Compile Include="view\publicRecord\family_record.Designer.cs">
       <DependentUpon>family_record.cs</DependentUpon>
     </Compile>
     <Compile Include="view\HomeDoctorSigningView\addMember.cs">
@@ -289,16 +290,16 @@
     <Compile Include="view\HomeDoctorSigningView\teamMembers.Designer.cs">
       <DependentUpon>teamMembers.cs</DependentUpon>
     </Compile>
-    <Compile Include="view\public\metachysis_record.cs">
+    <Compile Include="view\publicRecord\metachysis_record.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="view\public\metachysis_record.Designer.cs">
+    <Compile Include="view\publicRecord\metachysis_record.Designer.cs">
       <DependentUpon>metachysis_record.cs</DependentUpon>
     </Compile>
-    <Compile Include="view\public\operation_record.cs">
+    <Compile Include="view\publicRecord\operation_record.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="view\public\operation_record.Designer.cs">
+    <Compile Include="view\publicRecord\operation_record.Designer.cs">
       <DependentUpon>operation_record.cs</DependentUpon>
     </Compile>
     <Compile Include="view\PublicHealthView\aUdiabetesPatientServices.cs">
@@ -409,29 +410,41 @@
     <Compile Include="view\PublicHealthView\vaccinationServices.Designer.cs">
       <DependentUpon>vaccinationServices.cs</DependentUpon>
     </Compile>
-    <Compile Include="view\public\follow_medicine_record.cs">
+    <Compile Include="view\publicRecord\follow_medicine_record.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="view\public\follow_medicine_record.Designer.cs">
+    <Compile Include="view\publicRecord\follow_medicine_record.Designer.cs">
       <DependentUpon>follow_medicine_record.cs</DependentUpon>
     </Compile>
-    <Compile Include="view\public\more.cs">
+    <Compile Include="view\publicRecord\more.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="view\public\more.Designer.cs">
+    <Compile Include="view\publicRecord\more.Designer.cs">
       <DependentUpon>more.cs</DependentUpon>
     </Compile>
-    <Compile Include="view\public\more0.cs">
+    <Compile Include="view\publicRecord\more0.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="view\public\more0.Designer.cs">
+    <Compile Include="view\publicRecord\more0.Designer.cs">
       <DependentUpon>more0.cs</DependentUpon>
     </Compile>
-    <Compile Include="view\public\resident_diseases.cs">
+    <Compile Include="view\publicRecord\resident_diseases.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="view\public\resident_diseases.Designer.cs">
+    <Compile Include="view\publicRecord\resident_diseases.Designer.cs">
       <DependentUpon>resident_diseases.cs</DependentUpon>
+    </Compile>
+    <Compile Include="view\publicRecord\vaccination_record.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\publicRecord\vaccination_record.Designer.cs">
+      <DependentUpon>vaccination_record.cs</DependentUpon>
+    </Compile>
+    <Compile Include="view\publicRecord\take_medicine_record.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\publicRecord\take_medicine_record.Designer.cs">
+      <DependentUpon>take_medicine_record.cs</DependentUpon>
     </Compile>
     <Compile Include="view\setting\basicInfoSettings.cs">
       <SubType>Form</SubType>
@@ -500,10 +513,10 @@
     <Compile Include="view\DataAnalysisView\usageStatistics.Designer.cs">
       <DependentUpon>usageStatistics.cs</DependentUpon>
     </Compile>
-    <Compile Include="view\public\traumatism_record.cs">
+    <Compile Include="view\publicRecord\traumatism_record.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="view\public\traumatism_record.Designer.cs">
+    <Compile Include="view\publicRecord\traumatism_record.Designer.cs">
       <DependentUpon>traumatism_record.cs</DependentUpon>
     </Compile>
     <Compile Include="view\updateTjResult\checkXueya.cs">
@@ -734,19 +747,31 @@
     <EmbeddedResource Include="view\PublicHealthView\tcmHealthServices.resx">
       <DependentUpon>tcmHealthServices.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="view\public\family_record.resx">
+    <EmbeddedResource Include="view\publicRecord\family_record.resx">
       <DependentUpon>family_record.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="view\public\metachysis_record.resx">
+    <EmbeddedResource Include="view\publicRecord\follow_medicine_record.resx">
+      <DependentUpon>follow_medicine_record.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\publicRecord\metachysis_record.resx">
       <DependentUpon>metachysis_record.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="view\public\operation_record.resx">
+    <EmbeddedResource Include="view\publicRecord\more0.resx">
+      <DependentUpon>more0.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\publicRecord\operation_record.resx">
       <DependentUpon>operation_record.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="view\public\resident_diseases.resx">
+    <EmbeddedResource Include="view\publicRecord\resident_diseases.resx">
       <DependentUpon>resident_diseases.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="view\public\traumatism_record.resx">
+    <EmbeddedResource Include="view\publicRecord\vaccination_record.resx">
+      <DependentUpon>vaccination_record.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\publicRecord\take_medicine_record.resx">
+      <DependentUpon>take_medicine_record.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\publicRecord\traumatism_record.resx">
       <DependentUpon>traumatism_record.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\setting\basicInfoSettings.resx">
