--- a/zkhwClient/zkhwClient.csproj
+++ b/zkhwClient/zkhwClient.csproj
@@ -173,6 +173,7 @@
     <Compile Include="bean\shenghuaBean.cs" />
     <Compile Include="bean\teamDoctorBean.cs" />
     <Compile Include="bean\teamInfoBean.cs" />
+    <Compile Include="bean\thresholdValueBean.cs" />
     <Compile Include="bean\UserInfo.cs" />
     <Compile Include="bean\xuechangguiBean.cs" />
     <Compile Include="control\PagerControl.cs">
