--- a/zkhwClient/zkhwClient.csproj
+++ b/zkhwClient/zkhwClient.csproj
@@ -230,6 +230,12 @@
     <Compile Include="view\PublicHealthView\addtcmHealthServices.Designer.cs">
       <DependentUpon>addtcmHealthServices.cs</DependentUpon>
     </Compile>
+    <Compile Include="view\PublicHealthView\addTotuberculosisPatientServices.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\PublicHealthView\addTotuberculosisPatientServices.Designer.cs">
+      <DependentUpon>addTotuberculosisPatientServices.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\PublicHealthView\addtuberculosisPatientServices.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -707,6 +713,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="view\PublicHealthView\addtcmHealthServices.resx">
       <DependentUpon>addtcmHealthServices.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\PublicHealthView\addTotuberculosisPatientServices.resx">
+      <DependentUpon>addTotuberculosisPatientServices.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\PublicHealthView\addtuberculosisPatientServices.resx">
       <DependentUpon>addtuberculosisPatientServices.cs</DependentUpon>
