--- a/zkhwClient/zkhwClient.csproj
+++ b/zkhwClient/zkhwClient.csproj
@@ -225,6 +225,12 @@
     <Compile Include="utils\IntPtrFindWindow.cs" />
     <Compile Include="utils\Md5.cs" />
     <Compile Include="utils\FSWControl.cs" />
+    <Compile Include="view\PublicHealthView\addchildrenCMHealthServices.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\PublicHealthView\addchildrenCMHealthServices.Designer.cs">
+      <DependentUpon>addchildrenCMHealthServices.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\PublicHealthView\addtcmHealthServices.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -242,6 +248,12 @@
     </Compile>
     <Compile Include="view\PublicHealthView\childrenCMHealthServices.Designer.cs">
       <DependentUpon>childrenCMHealthServices.cs</DependentUpon>
+    </Compile>
+    <Compile Include="view\PublicHealthView\deletechildrenCMHealthServices.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\PublicHealthView\deletechildrenCMHealthServices.Designer.cs">
+      <DependentUpon>deletechildrenCMHealthServices.cs</DependentUpon>
     </Compile>
     <Compile Include="view\PublicHealthView\detaTotuberculosisPatientServices.cs">
       <SubType>Form</SubType>
@@ -700,6 +712,9 @@
     <EmbeddedResource Include="view\HomeDoctorSigningView\teamMembers.resx">
       <DependentUpon>teamMembers.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="view\PublicHealthView\addchildrenCMHealthServices.resx">
+      <DependentUpon>addchildrenCMHealthServices.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="view\PublicHealthView\addtcmHealthServices.resx">
       <DependentUpon>addtcmHealthServices.cs</DependentUpon>
     </EmbeddedResource>
@@ -708,6 +723,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="view\PublicHealthView\childrenCMHealthServices.resx">
       <DependentUpon>childrenCMHealthServices.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\PublicHealthView\deletechildrenCMHealthServices.resx">
+      <DependentUpon>deletechildrenCMHealthServices.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\PublicHealthView\detaTotuberculosisPatientServices.resx">
       <DependentUpon>detaTotuberculosisPatientServices.cs</DependentUpon>
