--- a/zkhwClient/zkhwClient.csproj
+++ b/zkhwClient/zkhwClient.csproj
@@ -231,6 +231,18 @@
     <Compile Include="view\PublicHealthView\addchildrenCMHealthServices.Designer.cs">
       <DependentUpon>addchildrenCMHealthServices.cs</DependentUpon>
     </Compile>
+    <Compile Include="view\PublicHealthView\addmaternalHealthServices.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\PublicHealthView\addmaternalHealthServices.Designer.cs">
+      <DependentUpon>addmaternalHealthServices.cs</DependentUpon>
+    </Compile>
+    <Compile Include="view\PublicHealthView\addStartMaternalHealthServices.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\PublicHealthView\addStartMaternalHealthServices.Designer.cs">
+      <DependentUpon>addStartMaternalHealthServices.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\PublicHealthView\addtcmHealthServices.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -715,6 +727,12 @@
     <EmbeddedResource Include="view\PublicHealthView\addchildrenCMHealthServices.resx">
       <DependentUpon>addchildrenCMHealthServices.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="view\PublicHealthView\addmaternalHealthServices.resx">
+      <DependentUpon>addmaternalHealthServices.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\PublicHealthView\addStartMaternalHealthServices.resx">
+      <DependentUpon>addStartMaternalHealthServices.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="view\PublicHealthView\addtcmHealthServices.resx">
       <DependentUpon>addtcmHealthServices.cs</DependentUpon>
     </EmbeddedResource>
@@ -774,6 +792,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="view\PublicHealthView\hypertensionPatientServices.resx">
       <DependentUpon>hypertensionPatientServices.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\PublicHealthView\maternalHealthServices.resx">
+      <DependentUpon>maternalHealthServices.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\PublicHealthView\olderHelthService.resx">
       <DependentUpon>olderHelthService.cs</DependentUpon>
