--- a/zkhwClient/zkhwClient.csproj
+++ b/zkhwClient/zkhwClient.csproj
@@ -261,6 +261,12 @@
     <Compile Include="view\PublicHealthView\addtcmHealthServices.Designer.cs">
       <DependentUpon>addtcmHealthServices.cs</DependentUpon>
     </Compile>
+    <Compile Include="view\PublicHealthView\addToChildHealthServices.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\PublicHealthView\addToChildHealthServices.Designer.cs">
+      <DependentUpon>addToChildHealthServices.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\PublicHealthView\addTotuberculosisPatientServices.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -765,6 +771,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="view\PublicHealthView\addtcmHealthServices.resx">
       <DependentUpon>addtcmHealthServices.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\PublicHealthView\addToChildHealthServices.resx">
+      <DependentUpon>addToChildHealthServices.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\PublicHealthView\addTotuberculosisPatientServices.resx">
       <DependentUpon>addTotuberculosisPatientServices.cs</DependentUpon>
